--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="card-container">
+    <main class="card-container">
       <div class="card">
         <img class="code" src="images/image-qr-code.png" alt="QR code that leads to Frontend Mentor page" />
         <div class="text">
@@ -17,11 +17,11 @@
           <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
       </div>
-    </div>
-    <div class="attribution">
+    </main>
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. Coded by
       <a href="https://github.com/LUKASZ-JK/">Łukasz Jędrzejczyk</a>.
-    </div>
+    </footer>
   </body>
 </html>
